k8s/database-love2shop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-love2shop-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: mycontainer
        image: mysql:9.1.0
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
        volumeMounts:
        # - mountPath: /config
        #   name: config-volume
        - mountPath: /var/lib/mysql
          name: database-love2shop-storage
        # - mountPath: /secrets
        #   name: secret-volume
        #   readOnly: true
      volumes:
      - name: database-love2shop-storage
        persistentVolumeClaim:
          claimName: database-love2shop-pvc
